array page and settings in progress..

--- a/android-project/app/src/main/res/navigation/nav_graph.xml
+++ b/android-project/app/src/main/res/navigation/nav_graph.xml
@@ -30,5 +30,10 @@
         android:label="fragment_recipe_detail"
         tools:layout="@layout/fragment_recipe_detail" >
     </fragment>
+    <fragment
+        android:id="@+id/favoritesFragment"
+        android:name="com.tasty.recipesapp.ui.favorites.FavoritesFragment"
+        android:label="fragment_favorites"
+        tools:layout="@layout/fragment_favorites" />
 
 </navigation>
