--- a/android-project/app/src/main/res/menu/app_menu.xml
+++ b/android-project/app/src/main/res/menu/app_menu.xml
@@ -1,14 +1,23 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/homeFragment"
         android:title="Home"
-        android:icon="@drawable/home"
-        />
+        android:icon="@drawable/home" />
     <item
         android:id="@+id/recipesFragment"
         android:title="Recipes"
-        android:icon="@drawable/bakery"
-         />
+        android:icon="@drawable/bakery" />
+    <item
+        android:id="@+id/add_item"
+        android:title="Plus"
+        app:showAsAction="always"
+        android:iconTint="@color/black"/>
+    <item
+        android:id="@+id/favoritesFragment"
+        android:title="Favorites"
+        android:icon="@drawable/person"
+        />
     <item
         android:id="@+id/profileFragment"
         android:title="Profile"
