--- a/android-project/app/src/main/res/layout/activity_main.xml
+++ b/android-project/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!-- Constraint Layout for the base -->
 <androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activities.MainActivity">
 
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.MainActivity">
-
+    <!-- Fragment Container -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -17,30 +15,32 @@
         android:layout_height="match_parent"
         app:navGraph="@navigation/nav_graph" />
 
+    <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemIconTint="@color/selected_icon_color"
+        app:itemIconTint="@null"
         app:itemTextColor="@color/selected_icon_color"
         app:menu="@menu/app_menu"
         app:elevation="8dp"
         android:background="@drawable/rounded_bottom"
-        app:itemBackground="@drawable/bottom_nav_item_background"
+        app:itemBackground="@null"
+        app:itemRippleColor="@null"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/white"
-        android:layout_gravity="center"
-        android:layout_marginBottom="-50dp"
-        app:elevation="12dp"
-        android:translationZ="12dp"
+        app:backgroundTint="@color/selected_icon_color"
+        android:src="@drawable/add"
+        android:layout_marginBottom="-70dp"
+        app:elevation="8dp"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
