--- a/android-project/app/src/main/res/values/colors.xml
+++ b/android-project/app/src/main/res/values/colors.xml
@@ -2,8 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="selected_icon_color">#111111</color> <!-- Example color for selected icon (orange) -->
-
-    <!-- Define your color for unselected icon state -->
-    <color name="unselected_icon_color">#808080</color>
+    <color name="selected_icon_color">#D6B4FC</color> <!-- Example color for selected icon (orange) -->
+    <color name="purple">#B19CD9</color>
+    <color name="unselected_icon_color">#FF000000</color>
 </resources>
