labor 6 instructions working

--- a/android-project/app/src/main/res/layout/item_instruction.xml
+++ b/android-project/app/src/main/res/layout/item_instruction.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="instruction"
+            type="com.tasty.recipesapp.models.InstructionModel" />
+    </data>
 
-    <TextView
-        android:id="@+id/instruction_text"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
-</LinearLayout>
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(instruction.position)}"
+            android:textStyle="bold"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{instruction.displayText}"
+            android:textSize="16sp"
+            android:paddingTop="4dp"/>
+    </LinearLayout>
+</layout>
