--- a/android-project/app/src/main/res/layout/fragment_home.xml
+++ b/android-project/app/src/main/res/layout/fragment_home.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".ui.home.HomeFragment">
 
+    <!-- Kép középre igazítva -->
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="390dp"
-        android:layout_height="406dp"
+        android:layout_width="229dp"
+        android:layout_height="225dp"
         android:layout_gravity="center"
         android:src="@drawable/recipehub_icon" />
 
+    <!-- Szöveg az ImageView alatt középre igazítva -->
     <TextView
-        android:layout_width="87dp"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home"
-        android:textSize="24sp" />
+        android:text="Welcome to the homepage"
+        android:layout_marginTop="16dp" /> <!-- Térköz hozzáadása a kép és a szöveg között -->
 
-</FrameLayout>
+</LinearLayout>
