--- a/android-project/app/src/main/res/menu/app_menu.xml
+++ b/android-project/app/src/main/res/menu/app_menu.xml
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/favoritesFragment"
         android:title="Favorites"
-        android:icon="@drawable/fav"
+        android:icon="@drawable/favorite"
         />
     <item
         android:id="@+id/profileFragment"
