labor 6 random recipe

--- a/android-project/app/src/main/res/layout/fragment_favorites.xml
+++ b/android-project/app/src/main/res/layout/fragment_favorites.xml
@@ -8,9 +8,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Recipes Title -->
+        <TextView
+            android:id="@+id/textViewFavoritesTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favorites"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_margin="16dp"
+            android:textColor="@color/selected_icon_color" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewFavorites"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_below="@id/textViewFavoritesTitle"
+            android:layout_height="match_parent"
+            android:paddingBottom="56dp"/>
     </RelativeLayout>
 </layout>
