--- a/android-project/app/src/main/res/values/themes.xml
+++ b/android-project/app/src/main/res/values/themes.xml
@@ -2,9 +2,20 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.RecipesApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="buttonStyle">@style/RoundedButton</item> <!-- Alapértelmezett gomb stílus -->
     </style>
 
     <style name="Theme.RecipesApp" parent="Base.Theme.RecipesApp"/>
+
+    <!-- Lekerekített gomb stílus -->
+    <style name="RoundedButton">
+        <item name="shapeAppearance">@style/ShapeAppearance.Material3.Corner16dp</item> <!-- Lekerekített sarkok -->
+        <item name="backgroundTint">@color/selected_icon_color</item> <!-- Gomb háttérszíne -->
+    </style>
+
+    <!-- Lekerekített sarok stílus -->
+    <style name="ShapeAppearance.Material3.Corner16dp" parent="">
+        <item name="cornerSize">16dp</item> <!-- Sarok méret -->
+    </style>
 </resources>
