labor 6 add recipe

--- a/android-project/app/src/main/res/layout/fragment_add_new_recipe.xml
+++ b/android-project/app/src/main/res/layout/fragment_add_new_recipe.xml
@@ -128,7 +128,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="56dp"
                     android:layout_marginTop="8dp"
-                    android:text="Add Recipe" />
+                    android:text="Add" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
