--- a/android-project/app/src/main/res/layout/fragment_profile.xml
+++ b/android-project/app/src/main/res/layout/fragment_profile.xml
@@ -59,7 +59,7 @@
             android:layout_marginTop="24dp"
             android:gravity="center"
             android:text="My All time favorite recipe"
-            android:textColor="@android:color/black"
+            android:textColor="@color/selected_icon_color"
             android:textSize="18sp"
             android:textStyle="bold" />
 
