labor 7 full recipes shown

--- a/android-project/app/src/main/res/layout/fragment_add_new_recipe.xml
+++ b/android-project/app/src/main/res/layout/fragment_add_new_recipe.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.tasty.recipesapp.models.ProfileRecipesViewModel" />
+            type="com.tasty.recipesapp.models.profile.ProfileRecipesViewModel" />
     </data>
 
     <LinearLayout
