--- a/android-project/app/src/main/res/layout/item_instruction.xml
+++ b/android-project/app/src/main/res/layout/item_instruction.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="instruction"
-            type="com.tasty.recipesapp.models.InstructionModel" />
+            type="com.tasty.recipesapp.models.recipe.recipemodels.InstructionModel" />
     </data>
 
     <LinearLayout
