--- a/android-project/app/src/main/res/layout/fragment_profile.xml
+++ b/android-project/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.tasty.recipesapp.models.ProfileRecipesViewModel" />
+            type="com.tasty.recipesapp.models.profile.ProfileRecipesViewModel" />
     </data>
 
     <!-- Profile Content -->
