--- a/android-project/app/src/main/res/layout/fragment_recipe.xml
+++ b/android-project/app/src/main/res/layout/fragment_recipe.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.tasty.recipesapp.models.RecipeViewModel" />
+            type="com.tasty.recipesapp.models.recipe.RecipeViewModel" />
     </data>
 
     <RelativeLayout
