--- a/android-project/app/src/main/res/layout/item_recipe.xml
+++ b/android-project/app/src/main/res/layout/item_recipe.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="recipe"
-            type="com.tasty.recipesapp.models.RecipeModel" />
+            type="com.tasty.recipesapp.models.recipe.RecipeModel" />
     </data>
 
     <androidx.cardview.widget.CardView
